<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.lucas.petros.spotfylab.features.login.presentation.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_extra_huge"
            android:text="@string/title_login"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lnButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_extra_large"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/materialButton2"
                android:layout_width="@dimen/width_size"
                android:layout_height="@dimen/height_size"
                android:layout_margin="@dimen/margin_normal"
                android:background="@drawable/button_background_radius"
                android:text="@string/btn_login"
                android:textColor="?attr/colorOnPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/vButtonLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{()-> vm.onClickButtonLogin()}"
            android:layout_marginHorizontal="@dimen/margin_extra_large"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/lnButton"
            app:layout_constraintEnd_toEndOf="@+id/lnButton"
            app:layout_constraintStart_toStartOf="@+id/lnButton"
            app:layout_constraintTop_toTopOf="@+id/lnButton" />

        <WebView
            android:id="@+id/web"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.lucas.petros.ui.UILoading
            android:id="@+id/uil_login"
            isVisible="@{vm.showLoading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_huge"
            app:description="@string/loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>