<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_gray">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_huge"
        android:background="@android:color/transparent"
        android:padding="6dp"
        android:src="@drawable/ic_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dialog"
        android:text="@string/name_playlist"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        app:layout_constraintBottom_toTopOf="@+id/etNamePlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibBack"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etNamePlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_extra_huge"
        android:backgroundTint="@color/dark_gray"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:hint="@string/minha_playlist_1"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"
        android:maxLines="1"
        android:maxLength="25"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_huge"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNamePlaylist">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/materialButton2"
            android:layout_width="@dimen/btn_login_width_size"
            android:layout_height="@dimen/btn_height_size"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/button_background_radius"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/vButtonCreate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_extra_large"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/lnButton"
        app:layout_constraintEnd_toEndOf="@+id/lnButton"
        app:layout_constraintStart_toStartOf="@+id/lnButton"
        app:layout_constraintTop_toTopOf="@+id/lnButton" />

</androidx.constraintlayout.widget.ConstraintLayout>