<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.lucas.petros.spotfylab.features.playlists.presentation.PlaylistsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.playlists.presentation.PlaylistsFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_huge"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/my_playlists"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivAlbum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAlbum"
            isCircle="@{true}"
            loadUrlImage="@{vm.imageProfile}"
            android:layout_width="@dimen/icon_normal"
            android:layout_height="@dimen/icon_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_huge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlayLists"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/rvPlayLists"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/materialButton2"
                android:layout_width="@dimen/btn_playlist_width_size"
                android:layout_height="@dimen/btn_height_size"
                android:layout_margin="@dimen/margin_normal"
                android:textStyle="bold"
                android:textSize="@dimen/text_title"
                android:textAllCaps="false"
                android:background="@drawable/button_background_radius"
                android:text="@string/create_playlist"
                android:textColor="?attr/colorPrimaryVariant" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/vButtonCreate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_extra_large"
            android:background="@android:color/transparent"
            android:onClick="@{()-> vm.onClickButton()}"
            app:layout_constraintBottom_toBottomOf="@+id/lnButton"
            app:layout_constraintEnd_toEndOf="@+id/lnButton"
            app:layout_constraintStart_toStartOf="@+id/lnButton"
            app:layout_constraintTop_toTopOf="@+id/lnButton" />

        <com.lucas.petros.ui.UILoading
            android:id="@+id/uil_loading"
            isVisible="@{vm.showLoading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_huge"
            app:description="@string/loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>